# bbbs

./: Cargo.toml
src/: app_state.rs  handler.rs  main.rs  model.rs  port.rs  read_model.rs  store.rs  write_model.rs
src/handler/: message.rs  messages.rs  root.rs  threads.rs
src/handler/messages/: create.rs  get.rs  list.rs
src/handler/threads/: create.rs  get.rs  list.rs  reply.rs
src/model/: read.rs  write.rs
src/model/read/: message.rs  thread.rs
src/model/shared/: event.rs  id.rs
src/model/shared/id/: event_id.rs  message_id.rs  thread_id.rs
src/model/write/: message.rs  message_content.rs  thread.rs  version.rs
src/store/: firestore_store.rs  in_memory_store.rs  sqlite_store.rs
src/store/firestore_store/: firestore_client.rs
src/store/sqlite_store/: insert_messages.sql  insert_thread_event_streams.sql  insert_thread_events.sql  insert_threads.sql  select_messages.sql  select_thread_event_streams.sql  select_thread_events.sql  select_threads.sql  select_threads_all.sql  update_thread_event_streams.sql  update_threads.sql
src/utils/: date_time.rs
templates/: index.html  root.html
templates/messages/: [id].html  index.html
templates/threads/: [id].html  index.html
