[package]
name = "bbbs"
edition = "2024"
publish = false

[dependencies]
askama = "0.14.0"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive", "env"] }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.98"
http-body-util = "0.1.3"
rand = "0.9.1"
tower = { version = "0.5.2", features = ["util"] }
