[package]
name = "bbbs"
edition = "2024"
publish = false

[dependencies]
askama = "0.14.0"
async-trait = "0.1.88"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive", "env"] }
firestore-path = { version = "1.0.7", optional = true }
gcloud-auth = { version = "1.1.1", default-features = false, features = ["rustls-tls"], optional = true }
googleapis-tonic-google-firestore-v1 = { version = "0.22.0", optional = true }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-firestore-value = { version = "0.21.0", optional = true }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
thiserror = "2.0.12"
token-source = { version = "1.0.0", optional = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.1", default-features = false, features = ["tls-webpki-roots"], optional = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.98"
http-body-util = "0.1.3"
rand = "0.9.1"
tower = { version = "0.5.2", features = ["util"] }

[features]
default = ["firestore"]
firestore = ["dep:firestore-path", "dep:gcloud-auth", "dep:googleapis-tonic-google-firestore-v1", "dep:serde-firestore-value", "dep:token-source", "dep:tonic"]
sqlite = ["dep:sqlx"]
